--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
+/*
+Author: Pavith Bambaravanage
+URL: https://github.com/Pavith19
+*/
+
 *, *::before, *::after {
     box-sizing: border-box;
   }
